# zkevm-specs

./: Makefile  pyproject.toml  transactions-proof.md
.github/workflows/: python-package.yml
specs/opcode/: 36CALLDATASIZE.md
src/zkevm_specs/evm/execution/: __init__.py  calldatasize.py
tests/: test_add_sub.py  test_mul.py
tests/evm/: test_calldatasize.py
zkevm_specs/evm/execution/: block_coinbase.py
